[tool.poetry]
name = "blos"
version = "0.1.0"
description = "Basic List Organizer Server (B.L.O.S.), The backend for the Basic List Organizer (B.L.O.) set of apps."
authors = ["Jordane Thomas <thomasjordane7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
